--- a/_posts/misc/2021-03-31-looking-back-2020.md
+++ b/_posts/misc/2021-03-31-looking-back-2020.md
@@ -4,7 +4,7 @@ title:         "2020年度振り返り"
 date:          2021-03-31
 category:      Misc
 cover:         /assets/cover2.jpg
-redirect_from:
+redirect_from: /misc/looking-back-2020nendo
 comments:      true
 published:     true
 latex:         false
