--- a/_posts/misc/2022-03-26-looking-back-2021.md
+++ b/_posts/misc/2022-03-26-looking-back-2021.md
@@ -4,7 +4,7 @@ title:         "2021年度振り返り"
 date:          2022-03-26
 category:      Misc
 cover:         /assets/cover2.jpg
-redirect_from:
+redirect_from: /misc/looking-back-2021nendo
 comments:      true
 published:     true
 latex:         false
