--- a/_posts/misc/2023-04-22-looking-back-2022.md
+++ b/_posts/misc/2023-04-22-looking-back-2022.md
@@ -4,7 +4,7 @@ title:         "2022年度振り返り"
 date:          2023-04-22
 category:      Misc
 cover:         /assets/cover2.jpg
-redirect_from:
+redirect_from: /misc/looking-back-2022nendo
 comments:      true
 published:     true
 latex:         false
