--- a/_posts/crypto/2026-02-05-secp256r1-nistp256.md
+++ b/_posts/crypto/2026-02-05-secp256r1-nistp256.md
@@ -7,7 +7,7 @@ cover:         /assets/cover4.jpg
 redirect_from:
 comments:      true
 published:     true
-latex:         true
+latex:         false
 photoswipe:    false
 # sitemap: false
 # feed:    false
@@ -17,22 +17,22 @@ photoswipe:    false
 標準化団体によって呼び方が異なっているだけです。
 以下は、楕円曲線暗号のパラメータ（曲線）である **secp256r1**、**prime256v1**、**NIST P-256** の違いについて説明します。
 
-## 楕円曲線のパラメータを定義する団体
+### 楕円曲線の係数を定義する団体
 
-楕円曲線暗号のパラメータは、主に以下の3つの団体によって標準化されています。
+楕円曲線暗号の係数は、主に以下の3つの団体によって標準化されています。
 それぞれの団体が独自の規格書を発行しているため、同じ曲線に対して異なる名前（識別子）が付けられています。
 
-### SECG
+#### SECG
 
 SECG (Standards for Efficient Cryptography Group) は、Certicom社（現在はBlackBerryの子会社）によって設立された、効率的な暗号技術の標準化を目指すコンソーシアムです。
 SEC 1 (Elliptic Curve Cryptography) や SEC 2 (Recommended Elliptic Curve Domain Parameters) などの仕様書を発行しており、ここで定義されたパラメータ名（`secp256r1` など）が広く使われています。
 
-### ANSI
+#### ANSI
 
 ANSI (American National Standards Institute) は米国国家規格協会で、米国の工業規格を標準化する団体です。
 金融サービス業界向けの規格を策定する委員会（X9）があり、楕円曲線暗号に関する規格 ANSI X9.62 などでパラメータ（`prime256v1` など）を定義しています。
 
-### NIST
+#### NIST
 
 NIST (National Institute of Standards and Technology) は米国国立標準技術研究所で、米国の技術標準を策定する政府機関です。
 連邦情報処理標準 (FIPS) を発行しており、FIPS 186 (Digital Signature Standard) などで推奨される楕円曲線パラメータ（`P-256` など）を定義しています。これらは米国政府システムでの利用を想定していますが、世界中で広く採用されています。
